# subtitle-editor

./: .gitignore  CLAUDE.md  README.md  SubtitleEditor.js  arrows  compress.js  debug.txt  deno.json  package-kit.sh  patch  sample-cuebert.js  sample-gap.cuebert.json  sample-gap.json  submit-issues.js  subtitle-editor.css  subtitle-editor.html  todo.txt
cue-editor/: CueEditor.js  cue-editor.css  cue-editor.html
cuebert/: CueBert.js  SubtitleEditor.js  app-logger.js  colors.css  cuebert.css  index.html  nightmare.md
cuebert-transcription-kit/: whisper-cli
cuebert/cue-editor/: CueEditor.js  cue-editor.css
cuebert/cue-list-view/: CueListView.js  CueListView.pseudo  cue-list-view.css  cue-list-view.html  delete.js
cuebert/help/: crash-logs.html  transcription-setup.html
cuebert/services/: AudioAnalyzer.js  AudioAnalyzer.pseudo  AudioAnalyzer.test.js  AudioAnalyzerWorker.js  AutosaveController.js  AutosaveController.test.js  CueOperations.js  CueOperations.test.js  (+17 more)
docs/: .file_cache.json  install-cuebert-transcription-kit-on-mac.md  refactor-subtitle-editor.md  syllabus.html  syllabus.md  tutorial.html  tutorial.md  whisper-cpp-workflow.md
scripts/: build-debug.js  bump-version.js  copy-debug-dmg.js  cuebert-transcribe.js  release.js  report-segments.js  update-icons.sh
services/: time.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Cuebert.icns
src-tauri/src/: main.rs
subtitle-editor/: ColorPalette.js  SubtitleEditor.js  colors.css  colors.html  index.html  parse-vtt.js  subtitle-editor.css
(+7 files in other folders)
