[package]
name = "cuebert"
version = "0.3.0"
description = "Cuebert desktop app"
authors = ["Patrick Hall"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = []
